<resources>
    <string name="app_name">Pomodoro-Scheduler</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select">Select</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="title">My Pomodoro</string>
    <string name="commitment_name_hint">Commitment Name</string>
    <string name="goal_name_hint">Name of Goal</string>
    <string name="location">Location</string>
    <string name="url">URL</string>
    <string name="notes">Notes</string>

    <string name="placeholder">PLACEHOLDER</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_date">09–09–2020</string>

    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="task_time">Task Time</string>
    <string name="task_time_picker_title">Select Total Task Time</string>
    <string name="default_task_time">30 mins</string>
    <string name="deadline">Deadline</string>
    <string name="deadline_picker_title">Select Deadline Date</string>

    <string name="priority">Priority</string>
    <string name="default_priority_selection">Low</string>
    <string name="priority_picker_title">Choose Priority</string>

    <string name="repeat">Repeat</string>
    <string name="default_repeat_selection">Never</string>
    <string name="repeat_picker_title">Choose Repeat Option</string>
    <string name="weekday_monday">Mo</string>
    <string name="weekday_tuesday">Tu</string>
    <string name="weekday_wednesday">We</string>
    <string name="weekday_thursday">Th</string>
    <string name="weekday_friday">Fr</string>
    <string name="weekday_saturday">Sa</string>
    <string name="weekday_sunday">Su</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_topActionBar_addIconTitle">AddTask</string>
    <string name="menu_topAppBar_addTask">+ Task</string>
    <string name="menu_topAppBar_Commitment">+ Commitment</string>
    <string name="menu_topAppBar_edit">Edit</string>

    <string name="invalid_time_selection">
        Error: Cannot select an end time that is before the start time!
    </string>
    <string name="commitment_create_error">
        Error: Something went wrong when trying to create a commitment.
    </string>
    <string name="commitment_name_error">
        Error: Cannot create a commitment without a name!
    </string>

    <string name="goal_create_error">
        Error: Something went wrong when trying to create a goal.
    </string>
    <string name="goal_delete_error">
        Error: Something went wrong when trying to delete a goal.
    </string>
    <string name="goal_name_error">
        Error: Cannot create a goal without a name!
    </string>

    <string name="server_client_id">812168882963-3gnv2a44ej6llphevtt25da9iqubjhda.apps.googleusercontent.com</string>
    <string name="logOut_btnText">Log Out</string>
    <string name="launch_btnText">Launch</string>
</resources>