<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.CreateGoalFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editText_goal_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="15sp"
        android:autofillHints="@string/goal_name_hint"
        android:backgroundTint="@color/rally_green"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/goal_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_goal_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="75sp"
        android:autofillHints="@string/location"
        android:backgroundTint="@color/rally_orange"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_goal_task_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/task_time"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_goal_task_time_time"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/default_task_time"
            android:textColor="@color/rally_green"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_goal_deadline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/deadline"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_goal_deadline_date"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_date"
            android:textColor="@color/rally_orange"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_goal_deadline_time"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_time"
            android:textColor="@color/rally_orange"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_goal_priority"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="4"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/priority"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_goal_priority"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="0dp"
            android:text="@string/default_priority_selection"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_goal_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/rally_green"
        android:ems="10"
        android:hint="@string/url"
        android:autofillHints="@string/url"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/editText_goal_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15sp"
        android:layout_marginVertical="10sp"
        android:backgroundTint="@color/rally_green"
        android:ems="10"
        android:hint="@string/notes"
        android:autofillHints="@string/notes"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <Button
        android:id="@+id/button_goal_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:backgroundTint="@color/white"
        android:text="@string/create"
        android:textColor="@color/black" />

</LinearLayout>