<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.MonthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="?android:attr/listSeparatorTextViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:id="@+id/button__FragmentEditSchedule_prev"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="10sp"
                android:src="@drawable/ic_sharp_arrow_back_ios_24" />
            <TextView
                android:id="@+id/button__FragmentEditSchedule_currentRecycler"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="10sp"
                android:text=""
                android:textAlignment="center"
                android:pointerIcon="arrow"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:id="@+id/button__FragmentEditSchedule_next"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:padding="10sp"
                android:src="@drawable/ic_sharp_arrow_forward_ios_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_sunday"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_monday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_tuesday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_wednesday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_thursday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_friday"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/weekday_saturday"
                android:textAlignment="center"
                android:textColor="@color/grey"
                android:textSize="20sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_fragmentMonth_monthDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="7sp" />
    </LinearLayout>

</FrameLayout>