<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".fragments.CreateCommitmentFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="15sp"
        android:autofillHints="@string/title"
        android:backgroundTint="@color/rally_green"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/commitment_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="75sp"
        android:autofillHints="@string/location"
        android:backgroundTint="@color/rally_orange"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_regular"
        android:hint="@string/location"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_commitment_startTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/start_time"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_commitment_startTime_date"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_date"
            android:textColor="@color/rally_green"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_commitment_startTime_time"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_time"
            android:textColor="@color/rally_green"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_commitment_endTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/end_time"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_commitment_endTime_date"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_date"
            android:textColor="@color/rally_orange"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_commitment_endTime_time"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/eczar_regular"
            android:text="@string/placeholder_time"
            android:textColor="@color/rally_orange"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_commitment_repeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_condensed_regular"
            android:gravity="center_vertical"
            android:text="@string/repeat"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner_commitment_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3.5" />

    </LinearLayout>

</LinearLayout>